Refs #140518 - Fix top menu z-index.

--- a/src/SearchBlock/less/styles.less
+++ b/src/SearchBlock/less/styles.less
@@ -41,6 +41,8 @@
 
 body.searchlib-page {
   div.header-wrapper[role='banner'] {
+    z-index: 801 !important; // above sticky facets
+
     div.ui.container:first-of-type {
       width: 100vw !important;
     }
